Fix h1 title too narrow

--- a/src/main/resources/htmlreport.css
+++ b/src/main/resources/htmlreport.css
@@ -8,7 +8,7 @@ h1, h2, h3 {
 }
 
 h1 {
-    width: 400px;
+    width: 500px;
     text-align: center;
 
     color: white;
